--- a/index.html
+++ b/index.html
@@ -20,22 +20,44 @@
     <div id="bottom-color"> </div>
     <div id="white-container">
       <h1>
-        FAQs
-      </h1>
-      <h3 class="question"> What is Frontend Mentor, and how will it help me? </h3>
-      <p class="answer">Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills with projects
-        in HTML, CSS, and JavaScript. It's suitable for all levels and ideal for portfolio building. </p>
-      <h3 class="question"> Is Frontend Mentor free? </h3>
-      <p class="answer">Yes, Frontend Mentor offers both free and premium coding challenges, with the free option providing access to a range
-        of projects suitable for all skill levels. </p>
-      <h3 class="question"> Can I use Frontend Mentor projects in my portfolio? </h3>
-      <p class="answer"> Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent way to showcase your skills
-        to potential employers! </p>
-      <h3 class="question"> How can I get help if I'm stuck on a Frontend Mentor challenge? </h3>
-      <p class="answer"> The best place to get help is inside Frontend Mentor's Discord community. There's a help channel where you can ask
-        questions and seek support from other community members.
-      </p>
-    </div>
+        <img src="./images/icon-star.svg" class="icon"> FAQs </h1>
+
+      <container class="q-and-a">
+        <h3 class="question">
+          What is Frontend Mentor, and how will it help me?
+          <div class="plus-minus">
+          </div>
+        </h3>
+        <p class="answer">Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills with projects
+          in HTML, CSS, and JavaScript. It's suitable for all levels and ideal for portfolio building. </p>
+      </container>
+
+      <container class="q-and-a">
+        <h3 class="question"> Is Frontend Mentor free?
+          <div class="plus-minus">
+          </div>
+        </h3>
+        <p class="answer">Yes, Frontend Mentor offers both free and premium coding challenges, with the free option providing access to a range
+          of projects suitable for all skill levels. </p>
+      </container>
+
+
+      <container class="q-and-a">
+        <h3 class="question"> Can I use Frontend Mentor projects in my portfolio? </h3>
+        <div class="plus-minus">
+        </div>
+        <p class="answer"> Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent way to showcase your
+          skills to potential employers! </p>
+      </container>
+
+      <container class="q-and-a">
+        <h3 class="question"> How can I get help if I'm stuck on a Frontend Mentor challenge? </h3>
+        <div class="plus-minus">
+        </div>
+        <p class="answer"> The best place to get help is inside Frontend Mentor's Discord community. There's a help channel where you can ask
+          questions and seek support from other community members.
+        </p>
+      </container>
     </div>
 
     <div class="attribution">
