--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       <container class="q-and-a">
         <h3 class="question">
           What is Frontend Mentor, and how will it help me?
-          <div class="plus-minus">
+          <div class="plus-minus" id="q1-toggle">
           </div>
         </h3>
-        <p class="answer">Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills with projects
+        <p class="answer" id="answer1">Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills with projects
           in HTML, CSS, and JavaScript. It's suitable for all levels and ideal for portfolio building. </p>
         <hr>
       </container>
@@ -73,6 +73,8 @@
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
       <a href="#">Your Name Here</a>.
   </section>
+
+  <script src="script.js"></script>
 </body>
 
 </html>
