--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<title>FAQ accordion</title>
+
 <html lang="en">
 
 <head>
@@ -9,9 +11,12 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-  <title>Frontend Mentor | FAQ accordion</title>
 
+ 
 </head>
 
 <body>
@@ -36,10 +41,10 @@
 
       <container class="q-and-a">
         <h3 class="question"> Is Frontend Mentor free?
-          <div class="plus-minus">
+          <div class="plus-minus" id="q2-toggle">
           </div>
         </h3>
-        <p class="answer">Yes, Frontend Mentor offers both free and premium coding challenges, with the free option providing access to a range
+        <p class="answer" id="answer2">Yes, Frontend Mentor offers both free and premium coding challenges, with the free option providing access to a range
           of projects suitable for all skill levels. </p>
         <hr>
       </container>
@@ -47,22 +52,21 @@
 
       <container class="q-and-a">
         <h3 class="question"> Can I use Frontend Mentor projects in my portfolio?
-          <div class="plus-minus">
+          <div class="plus-minus" id="q3-toggle">
           </div>
         </h3>
 
-        <p class="answer"> Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent way to showcase your
+        <p class="answer" id="answer3"> Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent way to showcase your
           skills to potential employers! </p>
         <hr>
       </container>
 
       <container class="q-and-a">
         <h3 class="question"> How can I get help if I'm stuck on a Frontend Mentor challenge?
-          <div class="plus-minus">
+          <div class="plus-minus" id="q4-toggle">
           </div>
         </h3>
-    </div>
-    <p class="answer"> The best place to get help is inside Frontend Mentor's Discord community. There's a help channel where you can ask questions
+    <p class="answer" id="answer4"> The best place to get help is inside Frontend Mentor's Discord community. There's a help channel where you can ask questions
       and seek support from other community members.
     </p>
     <hr>
