--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img src="./images/icon-star.svg" class="icon"> FAQs </h1>
 
       <container class="q-and-a">
-        <h3 class="question">
+        <h3 class="question" id="q1">
           What is Frontend Mentor, and how will it help me?
           <div class="plus-minus" id="q1-toggle">
           </div>
@@ -40,7 +40,7 @@
       </container>
 
       <container class="q-and-a">
-        <h3 class="question"> Is Frontend Mentor free?
+        <h3 class="question" id="q2"> Is Frontend Mentor free?
           <div class="plus-minus" id="q2-toggle">
           </div>
         </h3>
@@ -50,8 +50,8 @@
       </container>
 
 
-      <container class="q-and-a">
-        <h3 class="question"> Can I use Frontend Mentor projects in my portfolio?
+      <container class="q-and-a" >
+        <h3 class="question" id="q3" > Can I use Frontend Mentor projects in my portfolio?
           <div class="plus-minus" id="q3-toggle">
           </div>
         </h3>
@@ -62,7 +62,7 @@
       </container>
 
       <container class="q-and-a">
-        <h3 class="question"> How can I get help if I'm stuck on a Frontend Mentor challenge?
+        <h3 class="question" id="q4"> How can I get help if I'm stuck on a Frontend Mentor challenge?
           <div class="plus-minus" id="q4-toggle">
           </div>
         </h3>
