--- a/index.html
+++ b/index.html
@@ -69,14 +69,13 @@
     <p class="answer" id="answer4"> The best place to get help is inside Frontend Mentor's Discord community. There's a help channel where you can ask questions
       and seek support from other community members.
     </p>
-    <hr>
     </container>
     </div>
 
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
-      <a href="#">Your Name Here</a>.
+      <a href="#">Julianna Messineo</a>.
   </section>
 
   <script src="script.js"></script>
